--- a/EoeFragment/res/values/strings.xml
+++ b/EoeFragment/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     
-    <string name="tab_dial">"通话记录"</string>
+    <string name="tab_dial">"拨号"</string>
     <string name="tab_contact">"联系人"</string>
     <string name="tab_personal">"个人中心"</string>
     
